--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,9 +13,12 @@ jobs:
 
     - name: Checkout Repository
       uses: actions/checkout@master
+    
+    - name: DISPLAY SECRETS
+      run: echo ${{secrets.AWS_ACCESS_KEY_ID}}
 
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@demo
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
