--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
- 
+permissions:
+  id-token: write
+  contents: read
 jobs:
   terraform-actions:
     name: Workflow
