--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - master
-permissions:
-  id-token: write
-  contents: read
+
 jobs:
   terraform-actions:
     name: Workflow
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
 
     - name: Checkout Repository
@@ -26,6 +27,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
+        secrets: inherit
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
